--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.38.0",
+    "@supabase/supabase-js": "^2.95.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.1.2",
+    "@types/node": "^22.19.9",
+    "@vitejs/plugin-react": "^5.1.3",
     "typescript": "~5.8.2",
     "vite": "^7.3.1"
   }
